# pyGitConnect

./: .gitignore  LICENSE  README.md  pyGitConnect.py  pyproject.toml
