[tool.poetry]
name = "pyGitConnect"
version = "0.1.0"
description = "Simple API interface for more convenient work with GitHub service"
authors = ["tankalxat34 <tankalxat34@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/python-poetry/poetry"
homepage = "https://github.com/python-poetry/poetry"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
