[tool.poetry]
name = "pyGitConnect"
version = "0.1.2"
description = "Simple API interface for more convenient work with GitHub service"
authors = ["tankalxat34 <tankalxat34@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/tankalxat34/pyGitConnect"
homepage = "https://github.com/tankalxat34/pyGitConnect"

keywords = ["github", "git", "package"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.20.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
